--- a/index.html
+++ b/index.html
@@ -1,12 +1,109 @@
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
-    <h1>My core 2 class website!</h1>
-    <p>Hot Reloading</p>
+
+  <main>
+    <section class="intro-block">
+  <header>
+    <div id="textbox">
+      <p class="alignleft"><a href="index.html"class="index.html">Janet Delavan</a></p>
+      <p class="alignright"><a href="about.html"class="about.html">About</a></p>
+    </div>
+    <div style="clear: both;"></div>
+  </header>
+  </section>
+<section class="project-block">
+  
+        <article>
+        <a href="Interaction-Projects.html">
+        <figure>
+          <img src="img/iPhone in Hand Mockup.jpg" />
+      </figure>
+    </a>
+    <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Core 1:Interaction</h4></a>
+
+    <p>This is a collection of projects I've worked on in my Core 1: Interactionn class this Fall 2021 semester at Parsons School of Design. </p>
+    <a href="Interaction-Projects.html">View projects</a>
+
+
+</article>
+  
+    <article>
+    <a href="mantra-merch.html">
+    <figure>
+      <img src="img/IMG_9768.jpg" />
+
+  </figure>
+</a>
+<a href="mantra-merch.html" class="unstyled-link"><h4 class="project-block_title">Mantra Merch</h4></a>
+
+<p>
+  Choosing a personal mantra then designing and producing a wearable merchandise item.</p>
+  <a href="mantra-merch.html">View project</a>
+
+
+</article>
+   
+    <article>
+    <a href="wikibook.html">
+    <figure>
+        <img src="img/Realistic Book PSD Mockup.jpg" />
+  </figure>
+</a>
+<a href="wikibook.html" class="unstyled-link"><h4 class="project-block_title">Wikibook</h4></a>
+<p>Translating a Wikipedia article into a visual form by designing and printing a 102 page book about Counterculture of the 1960s and it’s timeline. </p>
+<a href="wikibook.html">View project</a>
+
+
+</article>
+
+      <article>
+      <a href="manifesto-poster.html">
+      <figure>
+        <img src="img/ManifestoPostermockup.jpg" />
+    </figure>
+  </a>
+  <a href="manifesto-poster.html" class="unstyled-link"><h4 class="project-block_title">Manifesto Poster</h4></a>
+
+  <p>Designing a poster for a nonexistent event based on  the historical manifesto of VALIE EXPORT.  </p>
+  <a href="manifesto-poster.html">View project</a>
+
+
+</article>
+
+</section>
+  </main>
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
+
 </html>
