--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <header>
     <div id="textbox">
       <p class="alignleft"><a href="index.html"class="index.html">Janet Delavan</a></p>
-      <p class="alignright"><a href="about.html"class="about.html">About</a></p>
+
     </div>
     <div style="clear: both;"></div>
   </header>
@@ -41,10 +41,10 @@
           <img src="img/iPhone in Hand Mockup.jpg" />
       </figure>
     </a>
-    <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Core 1:Interaction</h4></a>
+    <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
 
     <p>This is a collection of projects I've worked on in my Core 1: Interactionn class this Fall 2021 semester at Parsons School of Design. </p>
-    <a href="Interaction-Projects.html">View projects</a>
+    <a href="Interaction-Projects.html">View project</a>
 
 
 </article>
@@ -56,7 +56,7 @@
 
   </figure>
 </a>
-<a href="mantra-merch.html" class="unstyled-link"><h4 class="project-block_title">Mantra Merch</h4></a>
+<a href="mantra-merch.html" class="unstyled-link"><h4 class="project-block_title">Project 2</h4></a>
 
 <p>
   Choosing a personal mantra then designing and producing a wearable merchandise item.</p>
@@ -71,7 +71,7 @@
         <img src="img/Realistic Book PSD Mockup.jpg" />
   </figure>
 </a>
-<a href="wikibook.html" class="unstyled-link"><h4 class="project-block_title">Wikibook</h4></a>
+<a href="wikibook.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
 <p>Translating a Wikipedia article into a visual form by designing and printing a 102 page book about Counterculture of the 1960s and it’s timeline. </p>
 <a href="wikibook.html">View project</a>
 
