--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
 
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="main.css">
@@ -38,12 +36,12 @@
         <article>
         <a href="Interaction-Projects.html">
         <figure>
-          <img src="img/iPhone in Hand Mockup.jpg" />
+          <img src="" />
       </figure>
     </a>
     <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
 
-    <p>This is a collection of projects I've worked on in my Core 1: Interactionn class this Fall 2021 semester at Parsons School of Design. </p>
+    <p> </p>
     <a href="Interaction-Projects.html">View project</a>
 
 
