--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </a>
     <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
 
-    <p> </p>
+    <p> Interaction with the Internet - Cross-Platform Storytelling</p>
     <a href="Interaction-Projects.html">View project</a>
 
 
@@ -50,14 +50,13 @@
     <article>
     <a href="mantra-merch.html">
     <figure>
-      <img src="img/IMG_9768.jpg" />
+      <img src="" />
 
   </figure>
 </a>
 <a href="mantra-merch.html" class="unstyled-link"><h4 class="project-block_title">Project 2</h4></a>
 
-<p>
-  Choosing a personal mantra then designing and producing a wearable merchandise item.</p>
+<p>Interaction with Type - Stories as Networks</p>
   <a href="mantra-merch.html">View project</a>
 
 
@@ -66,11 +65,11 @@
     <article>
     <a href="wikibook.html">
     <figure>
-        <img src="img/Realistic Book PSD Mockup.jpg" />
+        <img src="" />
   </figure>
 </a>
 <a href="wikibook.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
-<p>Translating a Wikipedia article into a visual form by designing and printing a 102 page book about Counterculture of the 1960s and it’s timeline. </p>
+<p>Interaction with Data - Elastic Collections</p>
 <a href="wikibook.html">View project</a>
 
 
@@ -79,12 +78,12 @@
       <article>
       <a href="manifesto-poster.html">
       <figure>
-        <img src="img/ManifestoPostermockup.jpg" />
+        <img src="" />
     </figure>
   </a>
-  <a href="manifesto-poster.html" class="unstyled-link"><h4 class="project-block_title">Manifesto Poster</h4></a>
+  <a href="manifesto-poster.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
 
-  <p>Designing a poster for a nonexistent event based on  the historical manifesto of VALIE EXPORT.  </p>
+  <p>Interaction with People - Input/Output</p>
   <a href="manifesto-poster.html">View project</a>
 
 
