--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div id="textbox">
       <p class="alignleft"><a href="index.html"class="index.html">Janet Delavan</a></p>
-      <p class="alignright"><a>Core 2 Interaction</a></p>
+      <p class="alignright"><a class="index.html">Core 2 Interaction</a></p>
 
     </div>
     <div style="clear: both;"></div>
@@ -35,73 +35,56 @@
 <section class="project-block">
   
         <article>
-        <a href="Interaction-Projects.html">
+        <a href="studio/project1.html">
         <figure>
           <img src="" />
       </figure>
     </a>
-    <a href="Interaction-Projects.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
+    <a href="studio/project1.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
 
     <p> Interaction with the Internet - Cross-Platform Storytelling</p>
-    <a href="Interaction-Projects.html">View project</a>
+    <a href="studio/project1.html">View project</a>
 
 
 </article>
   
     <article>
-    <a href="mantra-merch.html">
+    <a href="studio/project2.html">
     <figure>
       <img src="" />
 
   </figure>
 </a>
-<a href="mantra-merch.html" class="unstyled-link"><h4 class="project-block_title">Project 2</h4></a>
+<a href="studio/project2.html" class="unstyled-link"><h4 class="project-block_title">Project 2</h4></a>
 
 <p>Interaction with Type - Stories as Networks</p>
-  <a href="mantra-merch.html">View project</a>
+  <a href="studio/project2.html">View project</a>
 
 
 </article>
    
     <article>
-    <a href="wikibook.html">
+    <a href="studio/project3.html">
     <figure>
         <img src="" />
   </figure>
 </a>
-<a href="wikibook.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
+<a href="studio/project3.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
 <p>Interaction with Data - Elastic Collections</p>
-<a href="wikibook.html">View project</a>
+<a href="studio/project3.html">View project</a>
 
 
 </article>
 
       <article>
-      <a href="manifesto-poster.html">
+      <a href="studio/project4.html">
       <figure>
         <img src="" />
     </figure>
   </a>
-  <a href="manifesto-poster.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
+  <a href="studio/project4.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
 
   <p>Interaction with People - Input/Output</p>
-  <a href="manifesto-poster.html">View project</a>
-
-
-</article>
-
-</section>
-  </main>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+  <a href="studio/project4.html">View project</a>
 
 </html>
