--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header>
     <div id="textbox">
       <p class="alignleft"><a href="index.html"class="index.html">Janet Delavan</a></p>
-      <p class="alignright"><a class="index.html">Core 2 Interaction</a></p>
+      <p class="alignright"><a href="index.html"class="index.html">Core 2 Interaction</a></p>
 
     </div>
     <div style="clear: both;"></div>
