--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="intro-block">
   <header>
     <div id="textbox">
-      <p class="alignleft"><a href="index.html"class="index.html">Janet Delavan</a></p>
+      <p class="alignleft"><a href="about.html"class="index.html">Janet Delavan</a></p>
       <p class="alignright"><a href="index.html"class="index.html">Core 2 Interaction</a></p>
 
     </div>
