--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <a href="studio/project1.html" class="unstyled-link"><h4 class="project-block_title">Project 1</h4></a>
 
     <p> Interaction with the Internet - Cross-Platform Storytelling</p>
-    <a href="studio/project1.html">View project</a>
+
 
 
 </article>
@@ -58,7 +58,7 @@
 <a href="studio/project2.html" class="unstyled-link"><h4 class="project-block_title">Project 2</h4></a>
 
 <p>Interaction with Type - Stories as Networks</p>
-  <a href="studio/project2.html">View project</a>
+  
 
 
 </article>
@@ -71,7 +71,7 @@
 </a>
 <a href="studio/project3.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
 <p>Interaction with Data - Elastic Collections</p>
-<a href="studio/project3.html">View project</a>
+
 
 
 </article>
@@ -85,6 +85,19 @@
   <a href="studio/project4.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
 
   <p>Interaction with People - Input/Output</p>
-  <a href="studio/project4.html">View project</a>
 
+</article>
+
+
+<article>
+<a href="studio/index2.html">
+<figure>
+  <img src="" />
+</figure>
+</a>
+<a href="studio/index2.html" class="unstyled-link"><h4 class="project-block_title">Week 3 Exercise</h4></a>
+
+<p>Reproducing Andrew's 1 Page Design</p>
+
+</article>
 </html>
