--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
 
 <article>
-<a href="studio/index2.html">
+<a href="studio/week3.html">
 <figure>
   <img src="" />
 </figure>
 </a>
-<a href="studio/index2.html" class="unstyled-link"><h4 class="project-block_title">Week 3 Exercise</h4></a>
+<a href="studio/week3.html" class="unstyled-link"><h4 class="project-block_title">Week 3 Exercise</h4></a>
 
 <p>Reproducing Andrew's 1 Page Design</p>
 
