--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="">
 
 
-  <link rel="stylesheet" href="normalize.css">
+
   <link rel="stylesheet" href="main.css">
 
   <meta name="theme-color" content="#fafafa">
@@ -26,7 +26,7 @@
   <header>
     <div id="textbox">
       <p class="alignleft"><a href="about.html"class="index.html">Janet Delavan</a></p>
-      <p class="alignright"><a href="index.html"class="index.html">Core 2 Interaction</a></p>
+      <p class="alignright"><a href="index.html"class="index.html">Home</a></p>
 
     </div>
     <div style="clear: both;"></div>
