--- a/index.html
+++ b/index.html
@@ -1,23 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-
-
-  <link rel="stylesheet" href="main.css">
-
-  <meta name="theme-color" content="#fafafa">
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Example Blog Post</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
 
 <body>
 
