--- a/studio/project2.html
+++ b/studio/project2.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Example Blog Post</title>
+    <title>Chapter 58</title>
     <link rel="stylesheet" href="../project2.css" />
     <embed src="../images/audio/yourhandsarecold.mp3" loop="true" autostart="true" hidden="true"></embed>
   </head>
