--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Example Blog Post</title>
+    <title>Janet Delavan</title>
     <link rel="stylesheet" href="main.css" />
   </head>
 
@@ -16,11 +16,13 @@
     <div id="textbox">
       <p class="alignleft"><a href="about.html"class="index.html">Janet Delavan</a></p>
       <p class="alignright"><a href="index.html"class="index.html">Home</a></p>
-
     </div>
     <div style="clear: both;"></div>
   </header>
   </section>
+
+
+
 <section class="project-block">
   
         <article>
