--- a/index.html
+++ b/index.html
@@ -91,4 +91,15 @@
 <p>Reproducing Andrew's 1 Page Design</p>
 
 </article>
+<article>
+  <a href="studio/week4.html">
+  <figure>
+    <img src="" />
+  </figure>
+  </a>
+  <a href="studio/week4.html" class="unstyled-link"><h4 class="project-block_title">Week 4 Exercise</h4></a>
+  
+  <p>Making a digital newspaper homepage and adding javascript</p>
+  
+  </article>
 </html>
