--- a/index.html
+++ b/index.html
@@ -102,4 +102,15 @@
   <p>Making a digital newspaper homepage and adding javascript</p>
   
   </article>
+  <article>
+    <a href="studio/project3/project3.html">
+    <figure>
+      <img src="" />
+    </figure>
+    </a>
+    <a href="studio/project3/project3.html" class="unstyled-link"><h4 class="project-block_title">Project 3</h4></a>
+    
+    <p>Creating an Archive</p>
+    
+    </article>
 </html>
