--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 	  </aside>
 	  <p class="short-bio">I'm Janet Delavan, a self-taught illustrator and communication design undergrad at Parsons School of Design in NYC. With a passion for learning new things, and discovering new interests, my style is constantly evolving. My illustrations focus on joyful compositions and warm color palettes to make life a little brighter, as graphic design goes, my style may contrast my illustrations quite a bit. I believe in approaching every project with mindfulness and determination to make each creation better than the last. When I'm not designing, I spend my free time playing tennis, getting late-night coffee, and spending time with her friends! 
       You can contact me over email janetdelavan@gmail.com or my instragram <a href="https://www.instagram.com/strwberryjan/">@strwberryjan</a> ! </p> 
-	  <figure class="lead-img"><img src="images/IMG_7600.jpg" /></figure>
+	  <figure class="lead-img"><img src="images/aboutpic.jpg" /></figure>
   </section>
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6RY6hqS8MUZysHcLsHTtS4?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 </body>
