--- a/studio/project3/project3.html
+++ b/studio/project3/project3.html
@@ -7,26 +7,32 @@
     <link rel="stylesheet" href="../project3/style.css" />
     <!--<script src ="../project3/script.js"></script>-->
 </head>
+
+<body>
+    <div class="janet">
+        <img src="../project3/items/janet.png" alt="janet" style="width:11%"/>
+    </div>
+    <div class="column">
+        <img src="../project3/items/bookendleft.png" alt="left" style="width:5%; padding:0;">
+        <img src="../project3/items/clear.png" alt="clear" style="width:2.3%; padding:0">
+        <img src="../project3/items/viewall.png" alt="viewall" style="width:4%; padding:0">
+        <img src="../project3/items/tattoos.png" alt="tattoos" style="width:2%">
+        <img src="../project3/items/modernart.png" alt="modernart" style="width:7%">
+        <img src="../project3/items/typography.png" alt="typography" style="width:5.5%">
+        <img src="../project3/items/expressionism.png" alt="expressionism" style="width:2.2%">
+        <img src="../project3/items/fauvism.png" alt="fauvism" style="width:6.2%">
+        <img src="../project3/items/Illustration.png" alt="Illustration" style="width:4.3%">
+        <img src="../project3/items/digitalart.png" alt="digitalart" style="width:4%">
+        <img src="../project3/items/memphisdesign.png" alt="memphisdesign" style="width:3%">
+        <img src="../project3/items/artnouveau.png" alt="artnouveau" style="width:3%">
+        <img src="../project3/items/mystuff.png" alt="mystuff" style="width:6%">
+        <img src="../project3/items/bookendright.png" alt="left" style="width:5%; padding:0;">
+    </div>
+    <div class="a">
+        <img class="shelf" src="../project3/items/shelf.png" alt="shelf"/>
+    </div>
+</body>
 </html>
-<body>
-</body>
-<body>
-    <div class="container">
-        <img class="shelf" src="../project3/items/shelf.png"/>
-            <div class="column">
-                <img src="../project3/items/clear.png" alt="clear" style="width:2.3%; padding:0">
-                <img src="../project3/items/viewall.png" alt="viewall" style="width:4%; padding:0">
-                <img src="../project3/items/tattoos.png" alt="tattoos" style="width:2%">
-                <img src="../project3/items/modernart.png" alt="modernart" style="width:7%">
-                <img src="../project3/items/typography.png" alt="typography" style="width:5.5%">
-                <img src="../project3/items/expressionism.png" alt="expressionism" style="width:2.2%">
-                <img src="../project3/items/fauvism.png" alt="fauvism" style="width:6.2%">
-                <img src="../project3/items/Illustration.png" alt="Illustration" style="width:4.3%">
-                <img src="../project3/items/digitalart.png" alt="digitalart" style="width:4%">
-                <img src="../project3/items/memphisdesign.png" alt="memphisdesign" style="width:3%">
-                <img src="../project3/items/artnouveau.png" alt="artnouveau" style="width:3%">
-                <img src="../project3/items/mystuff.png" alt="mystuff" style="width:6%">
-        </div>
-</body>
+
 
 
