--- a/studio/project3/project3.html
+++ b/studio/project3/project3.html
@@ -5,33 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>janet's inspiration</title>
     <link rel="stylesheet" href="../project3/style.css" />
-    <!--<script src ="../project3/script.js"></script>-->
+    <script src ="../project3/script.js"></script>
 </head>
 
 <body>
+    <header>
+        
+    </header>
+
+        <div class="viewall">
+            <div class="frame2"><img src="../project3/viewall/theopenwindow.png" style="width:100%"></div>
+            <div class="frame3"><img src="../project3/viewall/wheredoesthetimego.png" style="width:100%"></div>
+            <div class="frame1"><img src="../project3/viewall/lamoisson.png" style="width:100%"></div>
+            <div class="frame4"><img src="../project3/viewall/flowerindark.png" style="width:120%"></div>
+            <div class="frame7"><img src="../project3/viewall/gainingexperience.png" style="width:100%"></div>
+            <div class="frame6"><img src="../project3/viewall/aliceneeluntitled.png" style="width:100%"></div>
+            <button class="trigger"><img src="../project3/viewall/blue.png" style="width:100%"></button>
+            <div class="frame14"><img src="../project3/viewall/stilllife.png" style="width:100%"></div>
+            <div class="frame9"><img src="../project3/viewall/stamp.png" style="width:100%"></div>
+            <div class="frame8"><img src="../project3/viewall/peacelilies.png" style="width:100%"></div>
+            <div class="frame10"><img src="../project3/viewall/philodendron.png" style="width:100%"></div>
+            <div class="frame11"><img src="../project3/viewall/thewillowfairy.png" style="width:100%"></div>
+            <div class="frame13"><img src="../project3/viewall/motherandchild.png" style="width:100%"></div>
+            <div class="frame12"><img src="../project3/viewall/resnik.png" style="width:100%"></div>
+            <div class="frame15"><img src="../project3/viewall/alvvays.png" style="width:100%"></div>
+            <div class="frame16"><img src="../project3/viewall/collectedpoems.png" style="width:100%"></div>
+            <div class="frame17"><img src="../project3/viewall/thelilacfairy.png" style="width:100%"></div>
+            <div class="frame18"><img src="../project3/viewall/workingfromhome.png" style="width:100%"></div>
+            <div class="frame19"><img src="../project3/viewall/portrait.png" style="width:100%"></div>
+        </div>
+
+    <nav>
     <div class="janet">
         <img src="../project3/items/janet.png" alt="janet" style="width:11%"/>
     </div>
     <div class="column">
-        <img src="../project3/items/bookendleft.png" alt="left" style="width:5%; padding:0;">
-        <img src="../project3/items/clear.png" alt="clear" style="width:2.3%; padding:0">
-        <img src="../project3/items/viewall.png" alt="viewall" style="width:4%; padding:0">
-        <img src="../project3/items/tattoos.png" alt="tattoos" style="width:2%">
-        <img src="../project3/items/modernart.png" alt="modernart" style="width:7%">
-        <img src="../project3/items/typography.png" alt="typography" style="width:5.5%">
-        <img src="../project3/items/expressionism.png" alt="expressionism" style="width:2.2%">
-        <img src="../project3/items/fauvism.png" alt="fauvism" style="width:6.2%">
-        <img src="../project3/items/Illustration.png" alt="Illustration" style="width:4.3%">
-        <img src="../project3/items/digitalart.png" alt="digitalart" style="width:4%">
-        <img src="../project3/items/memphisdesign.png" alt="memphisdesign" style="width:3%">
-        <img src="../project3/items/artnouveau.png" alt="artnouveau" style="width:3%">
-        <img src="../project3/items/mystuff.png" alt="mystuff" style="width:6%">
-        <img src="../project3/items/bookendright.png" alt="left" style="width:5%; padding:0;">
+        <img src="../project3/items/bookendleft.png" alt="left" style="width:5%; padding:0; pointer-events: none;">
+        <img class="clear" src="../project3/items/clear.png" style="width:2.3%; padding:0"> 
+        <img class="viewallb" src="../project3/items/viewall.png" style="width:4%; padding:0">
+        <img class="tattoos" src="../project3/items/tattoos.png" style="width:2%">
+        <img class="modernart" src="../project3/items/modernart.png" style="width:7%">
+        <img class="typography" src="../project3/items/typography.png" style="width:5.5%">
+        <img class="expressionism" src="../project3/items/expressionism.png" style="width:2.2%">
+        <img class="fauvism" src="../project3/items/fauvism.png" style="width:6.2%">
+        <img class="illustration" src="../project3/items/Illustration.png" style="width:4.3%">
+        <img class="digitalart" src="../project3/items/digitalart.png" style="width:4%">
+        <img class="memphisdesign" src="../project3/items/memphisdesign.png" style="width:3%">
+        <img class="artnouveau" src="../project3/items/artnouveau.png" style="width:3%">
+        <img class="mystuffb" src="../project3/items/mystuff.png" style="width:6%">
+        <img src="../project3/items/bookendright.png" alt="left" style="width:5%; padding:0; pointer-events: none;">
     </div>
     <div class="a">
         <img class="shelf" src="../project3/items/shelf.png" alt="shelf"/>
     </div>
+    </nav>
+
+    <div class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h1>Hello, this is the popup</h1>
+        </div>
+    </div>
+
 </body>
+
 </html>
 
 
