--- a/studio/project3/project3.html
+++ b/studio/project3/project3.html
@@ -20,7 +20,9 @@
             <div class="frame4"><img src="../project3/viewall/flowerindark.png" style="width:120%"></div>
             <div class="frame7"><img src="../project3/viewall/gainingexperience.png" style="width:100%"></div>
             <div class="frame6"><img src="../project3/viewall/aliceneeluntitled.png" style="width:100%"></div>
+
             <button class="trigger"><img src="../project3/viewall/blue.png" style="width:100%"></button>
+
             <div class="frame14"><img src="../project3/viewall/stilllife.png" style="width:100%"></div>
             <div class="frame9"><img src="../project3/viewall/stamp.png" style="width:100%"></div>
             <div class="frame8"><img src="../project3/viewall/peacelilies.png" style="width:100%"></div>
@@ -62,6 +64,7 @@
 
     <div class="modal">
         <div class="modal-content">
+            <img class="details" src="../project3/details/IMG_3086.jpg">
             <span class="close-button">&times;</span>
             <h1>Hello, this is the popup</h1>
         </div>
