--- a/studio/project3/project3.html
+++ b/studio/project3/project3.html
@@ -62,10 +62,9 @@
     </div>
     </nav>
 
-    <div class="modal">
+    <div class="modal" id="modal">
         <div class="modal-content">
             <img class="details" src="../project3/details/IMG_3086.jpg">
-            <span class="close-button">&times;</span>
             <h1>Hello, this is the popup</h1>
         </div>
     </div>
