--- a/index.html
+++ b/index.html
@@ -102,4 +102,15 @@
   <p>Making a digital newspaper homepage and adding javascript</p>
   
   </article>
+  <article>
+    <a href="lab/index.html">
+    <figure>
+      <img src="" />
+    </figure>
+    </a>
+    <a href="lab/index.html" class="unstyled-link"><h4 class="project-block_title">Week 12 Exercise</h4></a>
+    
+    <p>Adding at least 1 interactive element that filters data</p>
+    
+    </article>
 </html>
