--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 </article>
 
       <article>
-      <a href="studio/project4.html">
+      <a href="studio/project4/index.html">
       <figure>
         <img src="" />
     </figure>
   </a>
-  <a href="studio/project4.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
+  <a href="studio/project4/index.html" class="unstyled-link"><h4 class="project-block_title">Project 4</h4></a>
 
   <p>Interaction with People - Input/Output</p>
 
