--- a/studio/project3/project3.html
+++ b/studio/project3/project3.html
@@ -64,11 +64,13 @@
     </nav>
 
     <div class="modal" id="modal" onclick = "toggleModal()">
-        <div class="modal-content">
+        <div class="modal-content" onclick = "clickPainting()" id = "painting">
             <img class="details" src="../project3/details/IMG_3086.jpg">
             <h1>Hello, this is the popup</h1>
-        </div>
+        </div> 
     </div>
+
+    <!-- add a div with an x to the pop up and then make the onclick "clickPainting()" - smitee -->
 
 </body>
 
