--- a/studio/project4/index.html
+++ b/studio/project4/index.html
@@ -36,7 +36,7 @@
 
 </body>
 
-<!-- <div onclick="myFunction()">
+<div onclick="myFunction()">
    <img class="popup" id="pennypopup" src ="images/pennypopup.png"> 
    <script>
        function myFunction() {
@@ -45,7 +45,7 @@
     popup.style.transition = "0.5s";
        }
    </script>
-</div> -->
+</div>
 
     
 </html>
